magnatune: Do not check for network connectivity

It fixex huge delay resolving dns.

g_network_monitor_can_reach() is sync and takes up to 30 seconds to
resolve dns with some users.

Link: https://bugzilla.gnome.org/show_bug.cgi?id=701336